# plk-memory

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_postgres_primary.py  0002_runtime_workflows.py
clients/: DISTRIBUTION.md  README.md  agent-sdk.md  claude-code.md  codex.md  guideline-line.md  hermes.md
deploy/: com.byteflare.plk-memory.plist
docs/: LESSONS.md  MIGRATION.md  OPERATIONS.md  PLK_CONTENT_AUDIT_2026-07-13.md  PLK_SEARCH_SUBSTITUTABILITY_AUDIT_2026-07-13.md
docs/design/: 2026-06-27-personal-cross-agent-memory-design-v3.md  2026-07-02-plk-memory-adversarial-review-log.md  2026-07-02-plk-memory-design.md  2026-07-10-postgres-primary-architecture.md  2026-07-15-plk-metrics-dashboard-design.md
docs/history/: progress-phase1.md  progress-phase2.md  progress-phase3.md
docs/history/plans/: 2026-07-02-plk-memory-phase0.md  2026-07-02-plk-memory-phase1.md  2026-07-03-plk-memory-phase2.md  2026-07-03-plk-memory-phase3.md
examples/: sdk_client_check.py
scripts/auth/: issue_jwt.py
scripts/curation/: run_report.py
scripts/eval/: measure_ingest.py  queries.yaml  run_eval.py
scripts/migration/: __init__.py  shadow_import_git.py
src/plk_memory/: admission.py  app.py  auth.py  composition.py  curation.py  domain.py  facade.py  facts.py  feedback.py  git_services.py  github_promotion.py  gitstore.py  graphindex.py  index_worker.py  mcp_tools.py  metrics.py  policy.py  ports.py  promotions.py  rendering.py  settings.py  slack_promotion.py  state.py  sync.py  usage_log.py  usage_records.py  webui.py
src/plk_memory/postgres/: __init__.py  application.py  approvals.py  database.py  graph_adapter.py  mappers.py  outbox.py  repository.py  schema.py  worker.py  write_ops.py
tests/: conftest.py  fakes.py  gitsync_helpers.py  test_admission.py  test_app.py  test_app_promotion.py  test_auth.py  test_curation.py  test_domain.py  test_eval_history.py  test_facts.py  test_feedback.py  test_frontmatter_metadata_types.py  test_github_promotion.py  test_gitstore.py  test_graphindex_determinism.py  test_graphindex_mapping.py  test_index_worker.py  test_jwt_auth.py  test_mcp_tools.py  test_metrics.py  test_policy.py  test_postgres_application.py  test_postgres_repository.py  test_postgres_runtime.py  test_postgres_runtime_guard.py  test_postgres_worker.py  test_promotions.py  test_rendering.py  test_settings.py  test_shadow_import.py  test_slack_promotion.py  test_state.py  test_sync.py  test_usage_log.py  test_usage_records.py  test_webui.py
tests_live/: conftest.py  test_graph_smoke.py
(+7 files in other folders)
