[project]
name = "plk-memory"
version = "0.1.0"
description = "PLK メモリ基盤 — PostgreSQL/Git storage + 再構築可能な検索索引"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "fastmcp>=3,<4",
    "mcp>=1.27,<2",
    "graphiti-core[anthropic,falkordb]>=0.29.2,<0.30",
    "python-frontmatter>=1.1",
    "python-ulid>=2.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "pyyaml>=6",
    "plk-validator",
    "nh3>=0.2",
    "markdown>=3.6",
    "sqlalchemy[asyncio]==2.0.49",
    "asyncpg==0.31.0",
    "alembic==1.18.4",
]

[project.scripts]
plk-index-worker = "plk_memory.index_worker:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "pyright>=1.1",
    "asgi-lifespan>=2.1.0",
    "testcontainers[postgres]==4.13.0",
]
examples = [
    "claude-agent-sdk>=0.2.110",
]

[tool.uv.sources]
plk-validator = { path = "../agent-organization/tools/validator", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: 外部サービス（FalkorDB/Ollama/Anthropic）が必要な統合テスト",
    "postgres: PostgreSQL が必要な永続化統合テスト",
]
addopts = "-m 'not live and not postgres'"

[tool.pyright]
include = ["src", "tests", "tests_live", "scripts/eval"]
extraPaths = ["src"]
pythonVersion = "3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plk_memory"]
